add /pipelines/search/fields
